# hiflow-pybind

./: .gitignore  CMakeLists.txt  Dockerfile  docker-compose.yml  dofFEM.txt  external_libs.txt
application/: .directory
application/met_flow_cci_dual/: met_flow_cci_copy.cc
cmake/: FindILU++.cmake  FindMETIS.cmake  FindPETSC.cmake  FindPyBind11.cmake  HiFlowConfiguration.cmake
contrib/: CMakeLists.txt
contrib/ILU++_1.1.1/: CMakeLists.txt  Makefile.in  main  main_solve  main_templates
doc/tutorials/poisson_adaptive/: tut_Poisson_adaptive.tex
exercises/: CMakeLists.txt
exercises/ex0_poisson/: error_estimate.h  ex0_poisson.cc  ex0_poisson.h  main.cpp
exercises/ex1_poisson/: ex1_poisson.cc  ex1_poisson.h  ex1_poisson.xml
exercises/test_cmake/: HiFlowFiles.cmake  test_cmake.cc
src/: CMakeLists.txt  config.h.in
src/adaptivity/: dynamic_mesh_handler.h  dynamic_mesh_problem.h  refinement_strategies.h  space_patch_interpolation.h
src/adaptivity/old/: dynamic_mesh.cc  dynamic_mesh.h  fe_interpolation.cc  fe_interpolation.h  goal_functional.cc  goal_functional.h  outtakes.cc  patch_interpolation.cc  patch_interpolation.h  refinement_strategies.cc  time_mesh.cc
src/assembly/: HiFlowFiles.cmake  assembly_assistant.h  assembly_assistant_values.h  assembly_utils.cc  assembly_utils.h  dg_assembly.cc  dg_assembly.h  dg_assembly_assistant.h  function_values.h  generic_assembly_algorithm.h  global_assembler.cc  global_assembler.h  hp_assembly.h  quadrature_selection.cc  standard_assembly.h
src/assembly/old/: assembly.cc  assembly.h  hp_assembly.cc  integration_utilities.h  standard_assembly.cc
src/common/: HiFlowFiles.cmake  bbox.h  bsphere.h  data_tools.h  grid.h  hdf5_tools.h  ioassistant.h  log.h  macros.h  parcom.cc  parcom.h  pointers.h  sort_permutation.h  sorted_array.h  vector_algebra.h
src/dof/: dof_fem_types.h  dof_interpolation_pattern.cc  dof_partition.cc  dof_partition.h  fe_interface_pattern.cc  fe_interface_pattern.h  numbering_lagrange.cc  numbering_lagrange.h  numbering_strategy.cc  numbering_strategy.h
src/dof/dof_impl/: dof_container.cc  dof_container.h  dof_container_lagrange.cc  dof_container_lagrange.h  dof_container_rt_bdm.cc  dof_container_rt_bdm.h  dof_functional.h  dof_functional_cell_moment.h  dof_functional_facet_normal_moment.h  dof_functional_point.h
src/dof/old/: degree_of_freedom.cc  degree_of_freedom.h  dof_outtakes.cc  dof_partition_global.cc  dof_partition_global.h  dof_partition_local.cc  dof_partition_local.h  numbering_lagrange.cc.dbg  numbering_lagrange.cc.normal  numbering_strategy.out.cc  (+4 more)
src/fem/: HiFlowFiles.cmake  fe_instance.cc  fe_instance.h  fe_manager.cc  fe_manager.h  fe_mapping.cc  fe_mapping.h  fe_reference.cc  fe_reference.h  fe_transformation.cc  fe_transformation.h  function_space.h  reference_cell.h
src/linear_algebra/: HiFlowFiles.cmake  block_matrix.cc  block_matrix.h  block_utilities.h  block_vector.cc  block_vector.h  coupled_matrix.cc  coupled_matrix.h  coupled_vector.cc  coupled_vector.h  coupled_vector_factory.h  hypre_matrix.cc  hypre_matrix.h  hypre_vector.cc  hypre_vector.h  la_couplings.h  la_descriptor.h  linear_operator.h  matrix.h  pce_vector.h  petsc_matrix.cc  petsc_matrix.h  petsc_vector.cc  schur_operator.cc  seq_dense_matrix.cc  seq_dense_matrix.h  sub_system.h  vector.h
src/linear_solver/: HiFlowFiles.cmake  bicgstab.cc  bicgstab.h  fgmres.cc  fgmres.h  gmg.h  gmres.cc  gmres.h  linear_solver.cc  linear_solver_factory.h  petsc_general_ksp.cc  preconditioner_bjacobi_standard.cc  preconditioner_mc.cc  preconditioner_mc.h  preconditioner_vanka.cc  preconditioner_vanka.h  schur_complement.cc  schur_complement_light.cc  single_subblock_solver.cc  single_subblock_solver.h
src/mesh/: attributes.cc  attributes.h  boundary_domain_descriptor.h  cell_type.cc  cell_type.h  cell_type_definitions.cc  communication.cc  communication.h  entity.cc  entity.h  geometric_search.cc  geometric_search.h  geometric_tools.cc  geometric_tools.h  interface.cc  interface.h  mesh.h  mesh_database.h  mesh_database_pXest.cc  mesh_database_pXest.h  mesh_db_view.h  mesh_pXest.cc  mesh_pXest.h  mesh_tools.cc  mesh_tools.h  mesh_wrapper.h  pXest_structs.h  periodicity_tools.cc  periodicity_tools.h  reader.cc  types.h
src/nonlinear/: newton.h
src/polynomial_chaos/: pc_mesh.h
src/polynomials/: lagrangepolynomial.cc  lagrangepolynomial.h
src/quadrature/: mapped_quadrature_type.cc  mapped_quadrature_type.h  quadrature.cc  quadrature.h
src/space/: HiFlowFiles.cmake  dirichlet_boundary_conditions.h  element.cc  element.h  fe_evaluation.cc  fe_evaluation.h  fe_interpolation_cell.h  fe_interpolation_global.h  fe_interpolation_map.h  vector_space.cc  vector_space.h
src/visualization/: cell_visualization.cc  cell_visualization.h
tests/: CMakeLists.txt  bdry_integration_test.cc  cell_transformation_test.cc  closest_point_test.cc  coupled_matrix_dense_test.cc  coupled_matrix_mesh_test.cc  dof_extended_identification_2D_test.cc  dof_extended_identification_3D_test.cc  dof_identification_test.cc  facet_integral_test.cc  facet_normal_test.cc  fe_bdm1_test.cc  fe_hdiv_test.cc  fe_interpol_conv_test.cc  fe_interpol_eval_test.cc  fe_nodal_test.cc  fe_projection_conv_test.cc  fe_transformation_test.cc  fe_weight_ordering_test.cc  fe_weight_test.cc  geometric_tools_test.cc  hp_assembly_test.cc  integration_test.cc  lmp_test.cc  parallel_adaptive_jump_term_test.cc  parallel_adaptive_jump_term_test.h  parallel_dof_test.cc  point_evaluator_test.cc  quadrature_order_test.cc  transformation_test.cc  vector_algebra_test.cc
tests/data/: find_adjacent_cells_cubemesh.inp  find_adjacent_cells_tetramesh.inp
tests/old/: dof_extended_identification_2D_test.cc  dof_extended_identification_test.cc  parallel_adaptive_jump_term_test.h  point_evaluator3D_test.cc  point_evaluator_2D_test.cc
utils/: CMakeLists.txt  check_partitioning.cc  inp2vtu.cc
utils/chaospy/: UQ_postprocess.py  UQ_postprocess_vtk_par.py  UQ_run_jobs.py
(+197 files in other folders)
